# iskobot-api

./: .env.example  Dockerfile  README.md  pyproject.toml
app/: app.py  config.py  debug.py  indexer.py  server.py
app/database/: RateLimitedEmbeddings.py  connector.py  vectorstore.py
app/document_processing/: chunking.py  docx.py  pdf.py  pptx.py  preprocess_documents.py
app/jobs/: pdf_vectorstore_ingestor.py  vectorstore_ingestor.py
app/models/: Query.py  auth.py
app/routes/: auth.py  ingestor.py  kms.py
app/scraper/: process_web_sources.py  rag_web_scraper.py
app/sessions/: __init__.py  auth.py  models.py  routes.py  service.py
app/speech_processing/: transcriber.py
app/storage/: GCSHandler.py  gcs.py  supabase_storage_handler.py
app/transcripts_processing/: transcriber.py
app/utils/: auth_utils.py  retry_with_backoff.py  text_cleaner.py
sessions/: chat.py  memory.py  service.py
