[tool.poetry]
name = "iskobot-api"
version = "0.1.0"
description = ""
authors = ["Siegfred Lorelle Mina <siegfredlorelle09@gmail.com>"]
readme = "README.md"
packages = [
    { include = "app" },
    { include = "package" },
]

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.23.2"
langserve = {extras = ["server"], version = ">=0.0.30"}
pydantic = {extras = ["email"], version = "^2.11.4"}
pgvector = "^0.3.6"
httpx = "0.27.2"
python-dotenv = "^1.0.1"
fitz = "^0.0.1.dev2"
pymupdf = "^1.25.1"
groq = "^0.15.0"
python-multipart = "^0.0.20"
python-docx = "^1.1.2"
python-pptx = "^1.0.2"
tqdm = "^4.67.1"
gradio-client = "^1.5.4"
websockets = "11.0.3"
bs4 = "^0.0.2"
psycopg2-binary = "^2.9.10"
supabase = "^2.14.0"
langchain-google-genai = "^2.1.1"
langchain = "^0.3.21"
langchain-community = "^0.3.20"
jwt = "^1.3.1"
elevenlabs = "^2.1.0"


[tool.poetry.group.dev.dependencies]
langchain-cli = ">=0.0.15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
